--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -3159,6 +3159,8 @@ MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWA
 
 -Bug fixed for the app running a self security check, when htaccess password-protection is enabled
 
+-New internal REST API endpoints, caching system, and improved documentation
+
 -Re-organized system stats, for quick admin access anywhere (admin area, portfolio area for logged-in admin)
 
 -API / Webhook reset feature in admin area
