--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -3193,7 +3193,11 @@ MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWA
 -------------------------------------------------------------------
 4.10.3:
 
--Misc. bug fixes / UX / compatibility improvements
+-Misc. UX / compatibility improvements
+
+-Microsoft Internet Explorer bug fixed, where log viewing / code examples were not rendering properly
+
+-Market pairing value function bug fixed, where under certain edge cases could make the cron job runtime excessively long
 
 -Code cleanup (semantics)
 
