--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -3193,7 +3193,7 @@ MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWA
 -------------------------------------------------------------------
 4.10.3:
 
--News page / tab, where you can choose (from a list) which crypto news feeds you want displayed there
+-News page / tab, where you can choose (from a list) which crypto news feeds you want displayed there (ATOM and Standard RSS format supported)
 
 -Misc. small bug fixes and UX / compatibility improvements
 
