Finished initial news feed buildout, misc. UX
Finished initial news feed buildout, misc. UX

--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -16,13 +16,13 @@ Password notes: https://www.php.net/manual/en/faq.passwords.php
 ///////////////////////////////////////////////////////
 
 
+Add bitmex API: https://www.bitmex.com/api/explorer/
+
+
 Double-check touch() usage in external api logic, before including in a release
 
 
 Do same ui for audio alert we did for currency market alert.
-
-
-Make sure "last lines" in log view ui are not the "first lines".
 
 
 CREATE A NEW ERROR LOG NOTICE if file write fails, and it's the API cache, AND STRICT SSL IS ON (THAT STRICT SSL #MAY# NEED TO BE TURNED OFF IN CONFIG.PHP)
