--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -3241,6 +3241,8 @@ MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWA
 
 -Code cleanup / optimization / fixes
 
+-Refined log data obfuscation
+
 -Runtime speed improvements
 
 IMPORTANT UPGRADE NOTES: 
