--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -3311,6 +3311,10 @@ MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWA
 
 -More RSS feeds to choose from
 
+-Dynamic lite chart settings in config.php
+
+-Optimized lite chart structuring
+
 IMPORTANT UPGRADE NOTES: 
 
 v4.06.0 / v4.07.7 / v4.10.1 HAVE MAJOR OVERHAULS TO CONFIGURATION VARIABLE NAMES (FOR MODULARITY, SEMANTICS, AND EASY-TO-UNDERSTAND NAMES). MIGRATE ANY PRE-EXISTING CUSTOM CONFIGURATION TO THE #NEW# VARIABLE NAMES
